Fix h2 alignment in IE6

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -402,7 +402,6 @@ div#controls div#st-editing-tools-edit h2 {
 	color: #333;
 	line-height: 44px;
 	padding-left: 10px;
-        display: inline;
 }
 
 body#listPage div#controls div#st-editing-tools-edit {
